# lens

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
lens/: __init__.py  cli.py  engine.py  models.py
lens/analyzer/: __init__.py  architecture.py  complexity.py  dependencies.py  entry_points.py  health.py  hotspots.py  markers.py  security.py  size.py  stats.py
lens/renderer/: __init__.py  html.py  json_out.py  markdown.py  onboard.py  terminal.py
lens/scanner/: __init__.py  detector.py  generic_scanner.py  git_scanner.py  go_scanner.py  js_scanner.py  python_scanner.py  rust_scanner.py
lens/search/: __init__.py  formatter.py  indexer.py  query_parser.py  ranker.py  synonym_map.py
lens/utils/: cache.py  file_utils.py  parallel.py
tests/: conftest.py  test_architecture.py  test_cache.py  test_cli.py  test_complexity.py  test_dependencies.py  test_detector.py  test_entry_points.py  test_file_utils.py  test_generic_scanner.py  test_git_scanner.py  test_go_scanner.py  test_health.py  test_hotspots.py  test_html_renderer.py  test_js_scanner.py  test_json_renderer.py  test_markdown_renderer.py  test_markers.py  test_onboard.py  test_parallel.py  test_python_scanner.py  test_rust_scanner.py  test_search.py  test_security.py  test_size.py  test_stats.py  test_terminal_renderer.py
