[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lens-cli"
version = "0.1.0"
description = "Explain any codebase in 30 seconds. Interactive architecture maps, dependency graphs, and codebase intelligence from your terminal."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Pranav", email = "pranav@example.com" },
]
keywords = [
    "codebase",
    "architecture",
    "developer-tools",
    "cli",
    "code-analysis",
    "static-analysis",
    "dependency-graph",
    "visualization",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "gitpython>=3.1",
]

[project.scripts]
lens = "lens.cli:main"

[project.urls]
Homepage = "https://github.com/patelpa1639/lens"
Repository = "https://github.com/patelpa1639/lens"
Issues = "https://github.com/patelpa1639/lens/issues"

[tool.hatch.build.targets.wheel]
packages = ["lens"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["E501", "SIM102", "SIM103", "SIM105", "SIM108"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["lens"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
